--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="footer">
       <form action="">
         <input type="email" name="userEmail" id="userEmail" placeholder="Email address" autocomplete="off">
+        <span id="emailInfo">Oops! Please add your email</span>
         <input type="submit" value="Request access">
       </form>
 
