change js, html and css

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
 
     <div class="footer">
       <form action="">
-        <input type="email" name="userEmail" id="userEmail" placeholder="Email address" autocomplete="off">
-        <span id="emailInfo"></span>
+        <div>
+          <input type="email" name="userEmail" id="userEmail" placeholder="Email address" autocomplete="off">
+          <span id="emailInfo"></span>
+        </div>
         <input type="submit" value="Request access">
       </form>
 
